# knowball

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  INSPIRATION-nba-players-scored-points-prediction.ipynb  README.md  app.py  build.py  data_collection.py  data_fetcher.py  db_config.py  fix_newlines.py  gathering.ipynb  get_nba_data.py  inference_v2_tail.txt  main.py  modeling-points.ipynb  new_setup_guide.md  package-lock.json  package.json  player_cache.py  pyproject.toml  requirements.txt  run_kalshi_ev.py  run_pipeline.py  scrape_nba_data.py  stats_analyzer.py  test_parquet.py  update_grading.py  update_inference.py  vercel.json
NFL/: NFL.ipynb  predict.py
api/: index.py
cache/: players.json
data/: game_dates.pkl  player_id2name.pkl  player_id2position.pkl  player_id2team.pkl  player_ids.pkl  raw_boxscores.parquet
data_collection/: DATABASE_SYNC_BEHAVIOR.md  DATA_MANUAL.md  DESKTOP_MIGRATION_INSTRUCTIONS.md  FIX_EMPTY_AGGREGATIONS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DB_SETUP.md  MAC_SETUP.md  SCHEMA_CHANGES_SUMMARY.md  SUPABASE_MIGRATION_GUIDE.md  config.py  database.py  debug_game.py  debug_seed.py  diagnose_aggregations.py  game_debug.json  local_database.py  local_refactor.md  main.py  player_parser.py  roster_response.json  setup_local_db.py  stat_normalizer.py  sync_to_supabase.py  test_connection.py  test_parser.py  test_player_insert.py  test_roster_fetch.py
experiments/: activity.py  alt_data_tests.ipynb  new_setup_guide.md  performances.py  players.py  x.csv
nba_stats_app/: app.py  get_nba_data.py
networks/: plan.md
networks/reproduction/: 01_data_pipeline.py  03_baselines_and_analysis.py  04_generate_figures.py  GATv2_GCN_NBA_Reproduction.ipynb  build_notebook.py  extra_data_pipeline.py  pyproject.toml  test_nba_api.py
notebooks/: modeling-points.ipynb
samples/: .env.example  app.js  data_collection.py  database.md  (+6 more)
(+130 files in other folders)
