[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowball"
version = "0.1.0"
description = "Python-native football analytics stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nflreadpy>=0.1.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/knowball"]
