[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowball"
version = "0.1.0"
description = "Python-native football analytics stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nflreadpy>=0.1.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "psycopg2-binary>=2.9.10",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/knowball"]
