[project]
name = "knowball-gnn-repro"
version = "0.1.0"
description = "GATv2-GCN NBA Performance Prediction Reproduction"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "nba-api>=1.4",
    "torch>=2.1",
    "torchvision",
    "torchaudio",
    "torch-geometric>=2.5",
    "networkx>=3.1",
    "tqdm>=4.65",
    "scipy>=1.11",
    "pyarrow>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
